optimisation de remove